6 stage is completed